--- a/style.css
+++ b/style.css
@@ -3,21 +3,18 @@
   box-sizing: border-box;
 }
 
-/* :root {
+:root {
   --app-height: 100%;
-} */
+}
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
   width: 100vw;
   height: 100vh;
 
-  /* @media not all and (hover: hover) {
+  @media not all and (hover: hover) {
     height: var(--app-height);
-  } */
+  }
 }
 
 .container {
